--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "art-template": "^4.13.2",
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "dayjs": "^1.8.6",
     "formidable": "^1.2.1",
     "getmac": "^1.4.6",
